monitoria/mac323/4-2-33/grades/Gustavo-Henrique-Faustino-Silva_190856_assignsubmission_file_WordDAG.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Erro de Montagem (o grafo dessa query não pode ser montado)
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-33/tester/checker/checker' is up to date.
CorretorDoVictaum.java:13: error: cannot find symbol
        public WordDAG ex;
               ^
  symbol:   class WordDAG
  location: class ArgsPasser
CorretorDoVictaum.java:78: error: cannot find symbol
            args.ex = new WordDAG(strings);
                          ^
  symbol:   class WordDAG
  location: class CorretorDoVictaum
2 errors
Second Compile Method
CorretorDoVictaum.java:13: error: cannot find symbol
        public WordDAG ex;
               ^
  symbol:   class WordDAG
  location: class ArgsPasser
CorretorDoVictaum.java:78: error: cannot find symbol
            args.ex = new WordDAG(strings);
                          ^
  symbol:   class WordDAG
  location: class CorretorDoVictaum
2 errors
